--- a/Project/MAC-coloreado.ipynb
+++ b/Project/MAC-coloreado.ipynb
@@ -5,18 +5,7 @@
    "execution_count": null,
    "id": "231e190f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.10.7 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
@@ -69,18 +58,7 @@
    "execution_count": null,
    "id": "28348bf5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.10.7 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "graph, G = createRandomGraph(10,50)\n",
     "nx.draw(G, with_labels=True)\n",
@@ -150,16 +128,10 @@
     "                grados.pop(i)\n",
     "                colored +=1\n",
     "        current_color +=1\n",
-    "    print(colores, grafo_coloreado)"
+    "    print(colores, grafo_coloreado)\n",
+    "\n",
+    "welsh_powel(graph,grados,cols)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4916480c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
